tests/paczka1/fuzzy1/82183367.err
Error in line 1: OHH3HNijO S18 13,3
Error in line 4: 4i39b9wI A817 42,6
Error in line 15: BZIwegdMDev A183 23,1
Error in line 16: BZIwegdMDev S414 48,8
Error in line 20: BZIwegdMDev A817 44,2
Error in line 26: 4i39b9wI S414 43,2
